# face_identification

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  train_data.txt  valid_data.txt
conf/: logging.json  resnet50.yaml
src/: __init__.py  build_dataset_meta.py  main.py  train.py
src/container/: trainer.py
src/core/container/: trainer.py
src/core/datasets/: __init__.py  lfw.py
src/core/layers/: __init__.py  penalty.py
src/core/layers/loss/: __init__.py  focal_loss.py
src/core/layers/metrics/: __init__.py  add_margin_prod.py  arc_margin_prod.py  sphere_prod.py
src/core/networks/backbone/: __init__.py
src/core/networks/backbone/pretrained/: classification.py  detection.py
src/core/networks/head/: arc.py  norm.py
src/core/networks/outputs/: __init__.py
src/core/optimizer/: __init__.py
src/core/scheduler/: __init__.py
src/datasets/: __init__.py  lfw.py
src/models/: __init__.py  arcface.py
src/modules/: argface.py
src/networks/backbone/: __init__.py
src/networks/backbone/pretrained/: classification.py  segmentation.py
src/ops/: __init__.py  metrics.py
src/utils/: __init__.py  config.py  dataloaders.py  dataset.py  logger.py  models.py
tests/: test_pytest.py
