[tool.poetry]
name = "face_identification"
version = "0.1.0"
description = ""
authors = ["martin Hwang <dhhwang89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
pytorch-lightning = "^1.6.3"
torch = "^1.11.0"
torchaudio = "^0.11.0"
torchsummary = "^1.5.1"
torchvision = "^0.12.0"
wandb = "^0.12.17"
setuptools = "58.2.0"
omegaconf = "^2.2.2"
type-docopt = "^0.8.2"
torchmetrics = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
pre-commit = "^2.17.0"
pylint = "^2.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
